[package]
name = "elicit_proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

readme = "README.md"
description = "Formal verification proof harnesses for the elicitation ecosystem (Kani, Creusot, Verus)"
keywords = ["verification", "kani", "formal-methods", "state-machine", "contracts"]
categories = ["development-tools", "mathematics"]

[dependencies]
elicitation = { workspace = true }
elicit_server = { workspace = true }
elicit_db = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
creusot-std = { workspace = true, optional = true }

[build-dependencies]
elicitation = { workspace = true }
elicit_server = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true, features = ["full"] }

[[bin]]
name = "elicit_proofs"
path = "src/main.rs"
required-features = ["runner"]

[features]
default = []
## Enable Kani proof harnesses for archive VSMs.
kani = ["dep:elicit_db", "dep:serde_json", "dep:chrono"]
## Enable Creusot companions for archive VSMs.
creusot = ["dep:creusot-std"]
## Enable Verus companions for archive VSMs.
verus = []
## Enable the proof runner CLI binary.
runner = ["dep:anyhow", "dep:chrono", "dep:clap", "dep:csv", "dep:serde", "dep:serde_json", "dep:tracing"]

[lints]
workspace = true
