[package]
name = "elicit_proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true

readme = "README.md"
description = "Formal verification proof harnesses for the elicitation ecosystem (Kani, Creusot, Verus)"
keywords = ["verification", "kani", "formal-methods", "state-machine", "contracts"]
categories = ["development-tools::testing", "mathematics"]

[dependencies]
elicitation = { workspace = true }
elicit_server = { workspace = true }
elicit_db = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
creusot-std = { workspace = true, optional = true }


[features]
default = []
## Enable Kani proof harnesses for archive VSMs.
kani = ["dep:elicit_db", "dep:serde_json", "dep:chrono", "dep:tracing"]
## Enable Creusot companions for archive VSMs.
creusot = ["dep:creusot-std"]
## Enable Verus companions for archive VSMs.
verus = []

[lints]
workspace = true
