[package]
name = "elicit_ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled ratatui TUI tools — dual-mode MCP tools with code emission"
keywords = ["mcp", "ratatui", "terminal-ui", "elicitation", "agent"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
elicitation.workspace = true
elicitation_derive.workspace = true
elicit_ui.workspace = true
elicit_accesskit.workspace = true
ratatui.workspace = true
accesskit.workspace = true
crossterm = { workspace = true, optional = true }
inventory.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
unicode-width.workspace = true
uuid = { workspace = true, optional = true }
quote.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true

[features]
emit = ["elicitation/emit"]
uuid = ["dep:uuid"]
runtime = ["dep:crossterm", "dep:tokio", "dep:uuid", "ratatui/crossterm"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(kani)',
  'cfg(creusot)',
  'cfg(prusti)',
  'cfg(verus)',
] }
