[package]
name = "elicit_redb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Elicitation-enabled redb type wrappers — MCP tools for redb embedded key-value store code generation"
keywords = ["mcp", "redb", "embedded", "database", "elicitation"]
categories = ["database", "development-tools"]

[features]
api = []

[dependencies]
elicitation = { workspace = true, features = ["redb-types", "emit"] }
elicitation_derive.workspace = true
elicitation_macros.workspace = true
inventory.workspace = true
redb.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
derive_more = { workspace = true }
hex.workspace = true
paste.workspace = true
uuid = { workspace = true, features = ["v4"] }
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)', 'cfg(feature, values("emit"))'] }
