[package]
name = "elicit_reqwest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
# Elicitation framework with url support
elicitation = { workspace = true, features = ["url"] }
elicitation_derive.workspace = true

# HTTP client
reqwest.workspace = true

# Required for types
url.workspace = true
http.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# JSON Schema
schemars.workspace = true

# MCP
rmcp.workspace = true

# Derive utilities (needed by elicit_newtype! macro)
derive_more.workspace = true

# Tracing (needed by #[derive(Elicit)])
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
