[package]
name = "elicit_reqwest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "MCP tool transport for reqwest — newtype wrappers, plugin registry, and contract-verified HTTP workflows"
keywords = ["mcp", "reqwest", "http", "elicitation", "workflow"]
categories = ["web-programming::http-client", "development-tools", "asynchronous"]

[dependencies]
# Elicitation framework with reqwest + url support
elicitation = { workspace = true, features = ["reqwest"] }
elicitation_derive.workspace = true

# HTTP client
reqwest.workspace = true

# Required for types
url.workspace = true
http.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

futures.workspace = true

# JSON Schema
schemars.workspace = true

# MCP
rmcp.workspace = true

# Derive utilities (needed by elicit_newtype! macro)
derive_more.workspace = true
derive_builder.workspace = true

# Tracing (needed by #[derive(Elicit)])
tracing.workspace = true

# Code recovery (optional)
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }

[features]
emit = ["dep:proc-macro2", "dep:quote", "elicitation/emit"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
