[package]
name = "elicit_rstar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Elicitation-enabled rstar shadow crate — MCP tools for R*-tree spatial index descriptors"
keywords = ["mcp", "rstar", "spatial", "elicitation", "geo"]
categories = ["science", "data-structures"]

[lints]
workspace = true

[dependencies]
derive-new.workspace = true
elicitation = { workspace = true, features = ["rstar-types"] }
elicitation_derive.workspace = true
futures.workspace = true
inventory = "0.3"
rmcp.workspace = true
rstar.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
