[package]
name = "elicit_serde"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "MCP tool transport for serde — serialize/deserialize any registered Elicitation type as JSON"
keywords = ["mcp", "serde", "serialization", "elicitation", "tools"]
categories = ["encoding", "development-tools"]

[dependencies]
elicitation = { workspace = true, features = ["serde"] }
elicitation_derive.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
inventory.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
inventory.workspace = true
schemars.workspace = true
elicitation_derive.workspace = true
rmcp.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)'] }
