[package]
name = "elicit_serde_json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

description = "Elicitation MCP tools for serde_json types (Value, Map, Number)"
keywords = ["mcp", "serde-json", "json", "elicitation", "agent"]
categories = ["development-tools"]

[dependencies]
elicitation = { workspace = true }
elicitation_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Code recovery (optional)

quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
emit = ["elicitation/emit"]
serde = []

[lints]
workspace = true
