[package]
name = "elicit_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

description = "Cross-crate workflow plugins for elicitation — code recovery, multi-crate compositions, and server-side orchestration"
keywords = ["mcp", "elicitation", "workflow", "server", "codegen"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Elicitation core
elicitation = { workspace = true, features = ["url"] }

# Workflow crates (cross-crate composition)
elicit_reqwest = { workspace = true }
elicit_serde_json = { workspace = true }
elicit_url = { workspace = true }
elicit_chrono = { workspace = true }
elicit_jiff = { workspace = true }
elicit_time = { workspace = true }
elicit_db = { workspace = true }
elicit_sqlx = { workspace = true }
elicit_polars = { workspace = true }
elicit_regex = { workspace = true }
elicit_accesskit = { workspace = true }
accesskit = { workspace = true }
elicit_tokio = { workspace = true }
elicit_egui = { workspace = true }
elicit_ratatui = { workspace = true, features = ["runtime"] }
elicit_leptos = { workspace = true }
elicit_axum = { workspace = true }
elicit_ui = { workspace = true }

# Third-party types (needed in cross-crate workflows)
reqwest = { workspace = true }
chrono = { workspace = true }
jiff = { workspace = true }
url = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
ratatui = { workspace = true }
axum = { workspace = true }
crossterm = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true, features = ["vulkan"] }
winit = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Derive macros
derive_more = { workspace = true }
strum = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# MCP
rmcp = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# Code recovery
proc-macro2 = { workspace = true }
quote = { workspace = true }
anyhow = { workspace = true }

[features]
emit = [
  "elicitation/emit",
  "elicit_reqwest/emit",
  "elicit_serde_json/emit",
  "elicit_url/emit",
  "elicit_chrono/emit",
  "elicit_jiff/emit",
  "elicit_time/emit",
  "elicit_regex/emit",
  "elicit_tokio/emit",
  "elicit_egui/emit",
]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
tempfile = "3.13"
reqwest = { workspace = true }

[[bin]]
name = "archive"
path = "src/bin/archive.rs"

[[test]]
name = "ledger_smoke_test"
required-features = ["emit"]

[[test]]
name = "ledger_phase2_query_test"
required-features = ["emit"]

[[test]]
name = "ledger_phase3_dynamic_test"
required-features = ["emit"]

[[test]]
name = "ledger_phase4_contracts_test"
required-features = ["emit"]

[[test]]
name = "emit_smoke_test"
required-features = ["emit"]

[[test]]
name = "ledger_phase5_typestate_test"

[[test]]
name = "ledger_phase6_concurrent_test"
