[package]
name = "elicit_std"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "MCP macro tools for the Rust standard library — emit-only tools for format!, include_str!, env!, concat!"
keywords = ["mcp", "standard-library", "elicitation", "primitives", "agent"]
categories = ["development-tools"]

[dependencies]
elicitation = { workspace = true, features = ["emit"] }
elicitation_derive.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
tracing.workspace = true
inventory.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
elicitation = { workspace = true, features = ["emit"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)', 'cfg(prusti)', 'cfg(verus)', 'cfg(feature, values("emit"))'] }
